<resources>
    <string name="app_name">GroceryShop App</string>
    <string name="welcome_string">Welcome to GroceryShop App</string>

    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>

    <string name="click_once">Click back Once again to Exit</string>

    <string name="enter_username">Please enter valid username</string>
    <string name="enter_email">Please enter valid Email Address</string>
    <string name="enter_password">Please enter valid password</string>

    <string name="signing_in">Signing In</string>

    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_cart">My Cart</string>
    <string name="payment">Payment</string>
    <string name="order_history">Order History</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="no_item_in_cart">No Item In Grocery Cart</string>
    <string name="total">Total: </string>


    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="place_order">Place Order</string>
    <string name="view">View</string>


</resources>