<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/item_my_profile"
               android:title="@string/my_profile"
            />
        <item android:id="@+id/item_my_cart"
            android:title="@string/my_cart"
            app:actionViewClass="android.widget.TextView"
            />
        <item android:id="@+id/item_payment"
            android:title="@string/payment"
            />
        <item android:id="@+id/order_history"
            android:title="@string/order_history"
            />
        <item android:id="@+id/item_sign_out"
            android:title="@string/sign_out"
            />

    </group>

</menu>